--- a/page2.css
+++ b/page2.css
@@ -98,7 +98,7 @@ footer {
     left: 0;
     width: 100%;
     display: flex; /* Використовуємо flexbox */
-    justify-content: space-between; /* Розподіляємо простір між елементами */
+    justify-content: center; /* Розподіляємо простір між елементами */
     align-items: center; /* Вирівнюємо елементи по вертикалі по центру */
     padding: 10px 20px;
     flex-wrap: wrap; /* Застосовуємо перенесення на новий рядок для додаткових елементів */
